--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,4 +7,5 @@ nav:
     #  - Get-ELCLastSuccessTimestamp: get-elclastsuccesstimestamp.md
     #- SharePoint/OneDrive:
     #  - Adaptive Scopes Property Bag: adaptivescopes-propertybag.md
+    - ⚠️ Submit an issue: https://github.com/brenle/MIGScripts/issues
 theme: readthedocs
