update documentation for validation script

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,3 +9,13 @@ nav:
     #  - Adaptive Scopes Property Bag: adaptivescopes-propertybag.md
     - ⚠️ Submit an issue: https://github.com/brenle/MIGScripts/issues
 theme: readthedocs
+markdown_extensions:
+  - toc:
+      permalink: ⚓︎
+  - admonition
+  - pymdownx.highlight
+  - pymdownx.superfences
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - attr_list
