--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,8 @@ nav:
       - Validate-AdaptiveScopesOPATHQuery.ps1: exo/validate-adaptivescopesopathquery.md
     #  - Get-MailboxRetentionInfo: get-mailboxretentioninfo.md
     #  - Get-ELCLastSuccessTimestamp: get-elclastsuccesstimestamp.md
-    #- SharePoint/OneDrive:
-    #  - Adaptive Scopes Property Bag: adaptivescopes-propertybag.md
+    - SharePoint/OneDrive:
+      - Adaptive Scopes Property Bag Scripts: spo-od/adaptive-scopes-propertybag-scripts.md
     - ⚠️ Submit an issue: https://github.com/brenle/MIGScripts/issues
 theme: readthedocs
 markdown_extensions:
